# polystation

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml
config/: settings.yaml
config/exchanges/: binance.yaml  deribit.yaml
config/sources/: radio.yaml  twitter.yaml
data/: polystation.db
deploy/: deploy.sh  polystation.service
monitoring/: prometheus.yml
polystation/: __init__.py  __main__.py  cli.py  config.py  log.py
polystation/backtest/: __init__.py  engine.py
polystation/core/: __init__.py  engine.py  events.py  kernel.py  metrics.py  orders.py  portfolio.py  prometheus.py  risk.py
polystation/dashboard/: __init__.py  app.py  ws.py
polystation/exchanges/: binance.py  deribit.py  paper.py  polymarket.py
polystation/infra/: __init__.py  redis_client.py
polystation/kernels/: __init__.py
polystation/market/: __init__.py  book.py  client.py  feed.py  scanner.py
polystation/persistence/: __init__.py  database.py  models.py
polystation/sources/: __init__.py  base.py  radio.py  twitter.py  youtube.py
polystation/speech/: __init__.py  detector.py  recognizer.py
polystation/trading/: __init__.py  client.py  (+3 more)
tests/: conftest.py  test_backtest.py  test_binance_exchange.py  test_config.py  test_deribit_exchange.py  test_detector.py  test_kernels.py  test_live_api.py  test_market_layer.py  test_orders.py  test_paper_exchange.py  test_persistence.py  test_portfolio_orders.py  test_prometheus.py  test_recorder.py  test_redis.py  test_risk_guard.py  test_sources.py
(+28 files in other folders)
